--- a/OP26_Lab1_Exception/OP26_Lab1_Exception.vcxproj
+++ b/OP26_Lab1_Exception/OP26_Lab1_Exception.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileName.cpp" />
     <ClCompile Include="OP26_Lab1_Exception.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
