--- a/OP26_Lab1_Exception/OP26_Lab1_Exception.vcxproj.filters
+++ b/OP26_Lab1_Exception/OP26_Lab1_Exception.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="OP26_Lab1_Exception.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileName.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
